[package]
name = "recommender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
futures = "0.3.30"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
nostr-sdk = "0.30.0"
ractor = {git = "https://github.com/slawlor/ractor", rev = "26a01d69e1d83a6d6f1cfcda668acb6deee74b13" }
regex = "1.10.4"
serde_json = "1.0.116"
sqlx = "0.7.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
